--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "scrape": "node scripts/update-holidays.mjs"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "clsx": "^2.1.1",
-    "effect": "^3.19.14",
     "lucide-react": "^0.562.0",
     "nepali-date-converter": "^3.4.0",
     "next": "16.1.3",
